--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
     "jest": "^29.7.0"
   }
 }
