--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn lint"
+    }
   },
   "keywords": [],
   "author": "",
@@ -14,6 +20,8 @@
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
+    "eslint": "^8.49.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0"
   }
 }
