--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,9 +2,11 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
@@ -16,21 +18,39 @@ jobs:
         node-version: [18.x]
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - name: Checkout código
+        uses: actions/checkout@v2
+
+      - name: Configurar Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm install
-      - run: npm run build --if-present
-      - run: yarn lint
-      - run: npm test
 
-  lint:
+      - name: Instalar dependências
+        run: npm install
+
+      - name: Build (se presente)
+        run: npm run build --if-present
+
+      - name: Lint
+        run: yarn lint
+
+      - name: Test
+        run: npm test
+
+  lint_check:
     runs-on: ubuntu-latest
+    needs: build  
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Lint package.json for "^" symbol
+      - name: Verificar status do linting
         run: |
-          grep -q '"dependencies": {[^}]*"\([^"]*\)": *"\^' package.json && echo "Error: Found '^' symbol in dependencies" && exit 1 || exit 0
+          # Comando para verificar o status do linting, por exemplo:
+          # Se o linting falhar, você pode usar o comando 'exit 1' para falhar a etapa
+          if yarn lint; then
+            echo "Linting passou."
+          else
+            echo "Linting falhou. Push bloqueado."
+            exit 1
+          fi
