--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "eslint": "^8.49.0",
+    "eslint-plugin-jest": "^27.2.3",
     "husky": "^8.0.3",
     "jest": "^29.7.0"
   }
