--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
-    "start": "node ./index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.5.0",
-    "dotenv": "^16.3.1"
+    "axios": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^8.49.0",
